- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    Qt Creator 4.1.0
 - 
    None
 
When in the welcome screen view and if you click on the New project button, the New project modal pops up, but it isn't modal. If you click on the main window it will be behind the window, and if you click on the New project button again it does nothing.
The New project modal should be modal, or New project should at least raise an already existing modal.
- relates to
 - 
                    
QTCREATORBUG-14293 "New File or Project" dialog does not get focus after Alt+Tab
-         
     - Closed
 
 -         
 
| For Gerrit Dashboard: QTCREATORBUG-16932 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 172044,2 | File > New: Bring existing dialog to foreground | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |